--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             <nav class="container">
                 <div class="logo"> VD </div>
                 <ul class="nav-links">
-                    <li> <a> Sobre </a> </li>
-                    <li> <a> Skills </a></li>
-                    <li> <a> Projetos </a></li>
-                    <li> <a> Contato </a></li>
+                    <li> <a href="dev-texto">Sobre</a></li>
+                    <li> <a href="skills-grid"> Skills </a></li>
+                    <li> <a href="projetos-grid"> Projetos </a></li>
+                    <li> <a href="contato-form"> Contato </a></li>
                 </ul>
             </nav>
         </header>
@@ -45,11 +45,6 @@
                         <div class="skill-icon">&#128202;</div>
                         <h3> Banco de dados </h3>
                         <p> My SQL </p>
-                    </div>
-                    <div class="skill-item">
-                        <div class="skill-icon">&#128736;</div>
-                        <h3> Ferramentas </h3>
-                        <p> Git, Docker, AWS </p>
                     </div>
                 </div>
             </section>
