--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             <nav class="container">
                 <div class="logo"> VD </div>
                 <ul class="nav-links">
-                    <li> <a href="dev-texto">Sobre</a></li>
-                    <li> <a href="skills-grid"> Skills </a></li>
-                    <li> <a href="projetos-grid"> Projetos </a></li>
-                    <li> <a href="contato-form"> Contato </a></li>
+                    <li> <a href="#sobre">Sobre</a></li>
+                    <li> <a href="#skills"> Skills </a></li>
+                    <li> <a href="#projetos"> Projetos </a></li>
+                    <li> <a href="#contato"> Contato </a></li>
                 </ul>
             </nav>
         </header>
