--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt">
     <head>
         <title> Desenvolvedor </title>
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
