--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
                     <li> <a href="#sobre">Sobre</a></li>
                     <li> <a href="#skills"> Skills </a></li>
                     <li> <a href="#projetos"> Projetos </a></li>
-                     <li> <a href="https://github.com/Vitor2209" target="_blank">Linkedin</a> </li>
+                     <li> <a href="https://www.linkedin.com/in/vitordutramelo/
+                        " target="_blank">Linkedin</a> </li>
                     <li> <a href="#contato"> Contato </a></li>
                 </ul>
             </nav>
