--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <li> <a href="#projetos"> Projetos </a></li>
                      <li> <a href="https://www.linkedin.com/in/vitordutramelo/
                         " target="_blank">Linkedin</a> </li>
-                     <li><a href="https://github.com/Vitor2209?tab=repositories">Git Hub</a></li>
+                     <li><a href="https://github.com/Vitor2209?tab=repositories" target="_blank">Git Hub</a></li>
                     <li> <a href="#contato"> Contato </a></li>
                 </ul>
             </nav>
